--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^3.12.0"
+    "react-navigation": "^3.12.0",
+    "react-navigation-hooks": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^16.8.23",
     "@types/react-native": "^0.57.65",
+    "@types/webpack-env": "^1.14.1",
     "babel-preset-expo": "^7.1.0",
     "typescript": "^3.6.3"
   },
