--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-paper": "^3.1.1",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
-    "react-navigation-hooks": "^1.1.0"
+    "react-navigation-hooks": "^1.1.0",
+    "react-navigation-material-bottom-tabs": "^2.1.5"
   },
   "devDependencies": {
     "@types/react": "^16.8.23",
