--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "deploy": "expo build:web && firebase deploy --only hosting",
     "eject": "expo eject"
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "^35.0.0",
+    "firebase": "^7.2.2",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
