--- a/package.json
+++ b/package.json
@@ -11,24 +11,23 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
     "@react-navigation/web": "^1.0.0-alpha.9",
-    "expo": "^35.0.0",
-    "firebase": "^7.2.2",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.3.0",
+    "expo": "^36.0.0",
+    "firebase": "^7.8.2",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.5.0",
     "react-native-paper": "^3.1.1",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
     "react-navigation-hooks": "^1.1.0",
-    "react-navigation-material-bottom-tabs": "^2.1.5",
-    "serve": "^11.2.0"
+    "react-navigation-material-bottom-tabs": "^2.1.5"
   },
   "devDependencies": {
-    "@types/react": "^16.8.23",
-    "@types/react-native": "^0.57.65",
+    "@types/react": "~16.9.0",
+    "@types/react-native": "~0.60.23",
     "@types/webpack-env": "^1.14.1",
-    "babel-preset-expo": "^7.1.0",
+    "babel-preset-expo": "~8.0.0",
     "typescript": "^3.6.3"
   },
   "private": true
