--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ register-service-worker.js
 
 # macOS
 .DS_Store
+
+# @generated: @expo/electron-adapter@0.0.0-alpha.20
+/.expo/*
+# Expo Web
+/web-build/*
+# electron-webpack
+/dist
+# @end @expo/electron-adapter
