--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/web": "^1.0.0-alpha.9",
     "electron": "^6.0.12",
     "expo": "^36.0.0",
+    "expo-constants": "^8.0.0",
+    "expo-permissions": "^8.0.0",
     "firebase": "^7.8.2",
     "react": "~16.12.0",
     "react-dom": "~16.12.0",
