Update react-navigation v5 ⚙️ (Trouble with the drawer blank screen)

--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
     "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
+    "scheme": "myapp",
     "updates": {
       "fallbackToCacheTimeout": 0
     },
