--- a/package.json
+++ b/package.json
@@ -10,21 +10,29 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
+    "@react-native-community/masked-view": "0.1.5",
+    "@react-navigation/drawer": "^5.0.0",
+    "@react-navigation/material-bottom-tabs": "^5.1.0",
+    "@react-navigation/native": "^5.0.0",
+    "@react-navigation/stack": "^5.0.0",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "electron": "^6.0.12",
     "expo": "^36.0.0",
-    "expo-constants": "^8.0.0",
+    "expo-asset": "~8.0.0",
+    "expo-constants": "~8.0.0",
+    "expo-font": "~8.0.0",
     "expo-permissions": "^8.0.0",
+    "expo-web-browser": "~8.0.0",
     "firebase": "^7.8.2",
     "react": "~16.12.0",
     "react-dom": "~16.12.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
-    "react-native-paper": "^3.1.1",
-    "react-native-web": "^0.11.7",
-    "react-navigation": "^3.12.0",
-    "react-navigation-hooks": "^1.1.0",
-    "react-navigation-material-bottom-tabs": "^2.1.5"
+    "react-native-paper": "^3.6.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-web": "^0.11.7"
   },
   "devDependencies": {
     "@expo/electron-adapter": "^0.0.0-alpha.20",
